Added connectionstring for inmemorydb

--- a/AuthenticationService/AuthenticationService/Properties/launchSettings.json
+++ b/AuthenticationService/AuthenticationService/Properties/launchSettings.json
@@ -26,6 +26,9 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=authentication-service-identity-test-db;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   }
 }
