--- a/AuthenticationService/AuthenticationService/appsettings.json
+++ b/AuthenticationService/AuthenticationService/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "Token": {
-    "Key": "SecretKey",
+    "Key": "SecretKeyForAuthentication",
     "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/",
