--- a/.github/workflows/kwetter-frontend.yml
+++ b/.github/workflows/kwetter-frontend.yml
@@ -1,10 +1,10 @@
-name: Authentication Service
+name: Kwetter Frontend
 
 on:
   # run it on push to the default repository branch
   push:
     branches: [main]
-    paths: 'authentication-service/**'
+    paths: 'kwetter-frontend/**'
 
 jobs:
   # define job to build and publish docker image
@@ -32,10 +32,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
-          context: ./authentication-service
+          context: ./kwetter-frontend
 
           # Note: tags has to be all lower-case
-          tags: dennycox/authentication-service:latest
+          tags: dennycox/kwetter-frontend:latest
 
           # build on feature branches, push only on master branch
           push: ${{ github.ref == 'refs/heads/main' }}
