--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,24 @@
-version: '1'
+version: '3'
 services:
   #Authentication Service
-  thd:
+  as:
     image: dennycox/authentication-service
     container_name: authentication-service
+    env_file: .thd.env
     ports:
-    - ${THD_PORT}:5001
+      - ${AS_PORT}:80
     networks:
-    - network-name
-
-    environment:
-      OFFLINE_STATUS: 0
-      ONLINE_STATUS: 1
-      HAS_ERRORS_STATUS: 2
-      SERVER_HOST: ${THS_HOST}
-      SERVER_PORT: ${THS_PORT}
+      - network-name
 
   #Kwetter Frontend
-  ths:
+  kf:
     image: dennycox/kwetter-frontend
     container_name: kwetter-frontend
     ports:
-      - ${THS_PORT}:6060
+      - ${KF_PORT}:80
     networks:
       - network-name
 
 networks:
   network-name:
-    name: Kwetter
+    name: kwetter
