--- a/authentication-service/Dockerfile
+++ b/authentication-service/Dockerfile
@@ -3,22 +3,22 @@
 #Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
 #For more information, please see https://aka.ms/containercompat
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 6060
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /Kwetter
-COPY ["authentication-service.csproj", "."]
-RUN dotnet restore "./authentication-service.csproj"
+ROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+WORKDIR /src
+COPY ["AuthenticationService/AuthenticationService.csproj", "AuthenticationService/"]
+RUN dotnet restore "AuthenticationService/AuthenticationService.csproj"
 COPY . .
-WORKDIR "/Kwetter/."
-RUN dotnet build "authentication-service.csproj" -c Release -o /app/build
+WORKDIR "/src/AuthenticationService"
+RUN dotnet build "AuthenticationService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "authentication-service.csproj" -c Release -o /app/publish
+RUN dotnet publish "AuthenticationService.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "authentication-service.dll"]
+ENTRYPOINT ["dotnet", "AuthenticationService.dll"]
