--- a/kwetter-frontend/Dockerfile
+++ b/kwetter-frontend/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json and package-lock.json are copied
-COPY ./webapp/package*.json .
+COPY package*.json /app/
 
 # Installs all node packages
 RUN npm install
@@ -13,14 +13,14 @@ RUN npm install
 # RUN npm ci --only=production
 
 # Copies everything over to Docker environment
-COPY ./webapp ./
+COPY ./ /app/
 RUN npm run build
 
 FROM nginx:1.19.0
 
 # Nginx config
 RUN rm -rf /etc/nginx/conf.d
-COPY ./webapp/conf /etc/nginx
+COPY ./conf /etc/nginx
 
 # Static build
 COPY --from=builder /app/dist /usr/share/nginx/html/
@@ -30,8 +30,8 @@ EXPOSE 80
 
 # Copy .env file and shell script to container
 WORKDIR /usr/share/nginx/html
-COPY ./webapp/env.sh .
-COPY ./webapp/.env .
+COPY ./env.sh .
+COPY ./.env .
 
 # Make our shell script executable
 RUN chmod +x env.sh
