--- a/.github/workflows/authentication-service.yml
+++ b/.github/workflows/authentication-service.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
-          context: ./authentication-service
+          context: ./authentication-service/AuthenticationService
 
           # Note: tags has to be all lower-case
           tags: dennycox/authentication-service:latest
