--- a/kwetter-frontend/Dockerfile
+++ b/kwetter-frontend/Dockerfile
@@ -1,13 +1,33 @@
 FROM node:16 AS builder
 
-# Create app directory
 WORKDIR /app
 
-# Install app dependencies
 COPY package*.json .
-COPY ./ /app/
 
 RUN npm install
+
+COPY ./ /app/
 RUN npm run build
+
+FROM nginx:1.19.0
+
+# Nginx config
+RUN rm -rf /etc/nginx/conf.d
+COPY ./conf /etc/nginx
+
+# Static build
+COPY --from=builder /app/build /usr/share/nginx/html/
+
+# Default port exposure
 EXPOSE 80
-ENTRYPOINT ["npm", "start"]
+
+# Copy .env file and shell script to container
+WORKDIR /usr/share/nginx/html
+COPY ./env.sh .
+COPY ./.env .
+
+# Make our shell script executable
+RUN chmod +x env.sh
+
+# Start Nginx server
+CMD ["/bin/bash", "-c", "/usr/share/nginx/html/env.sh && nginx -g \"daemon off;\""]
