--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3'
 services:
   #Authentication Service
-  as:
-    image: dennycox/authentication-service
+  authentication-service:
+    build: ./authentication-service/AuthenticationService
     container_name: authentication-service
     ports:
-      - ${AS_PORT}:80
+      - 6060:80
     networks:
       - network-name
 
   #Kwetter Frontend
-  kf:
-    image: dennycox/kwetter-frontend
+  kwetter-frontend:
+    build: ./kwetter-frontend
     container_name: kwetter-frontend
-    env_file: .kf.env
+    # env_file: .kf.env
     ports:
-      - ${KF_PORT}:80
+      - 3000:80
     networks:
       - network-name
 
