Prepared rabbitmq functioinality

--- a/authentication-service/AuthenticationService/appsettings.json
+++ b/authentication-service/AuthenticationService/appsettings.json
@@ -12,6 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=authentication-service-identity-test-db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RabbitMqConnectionString": "amqp://guest:guest@localhost:5672"
+  },
   "Token": {
     "Key": "SecretKeyForAuthentication",
     "Issuer": "https://localhost:5001"
