Added profile service

--- a/profile-service/ProfileService/appsettings.json
+++ b/profile-service/ProfileService/appsettings.json
@@ -12,5 +12,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=profile-service-test-db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RabbitMqConnectionString": "amqp://guest:guest@localhost:5672"
+  },
   "AllowedHosts": "*"
 }
