--- a/profile-service/ProfileService/appsettings.json
+++ b/profile-service/ProfileService/appsettings.json
@@ -14,7 +14,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=profile-service-test-db;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "RabbitMqConnectionString": "amqp://guest:guest@localhost:5672"
+    "RabbitMqConnectionString": "amqp://guest:guest@rabbitmq:5672"
   },
   "AllowedHosts": "*"
 }
