Added a sql database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,18 @@ services:
     networks:
       - network-name
   
+  #SQL Express
+  sqlexpress:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    environment:
+      ACCEPT_EULA: Y
+      SA_PASSWORD: 1Secure*Password1
+    container_name: sqlexpress
+    ports:
+      - 1433:1433
+    networks:
+      - network-name
+  
   #RabbitMQ
   rabbitmq:
     image: rabbitmq:3-management
