--- a/profile-service/ProfileService/appsettings.json
+++ b/profile-service/ProfileService/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=profile-service-test-db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=TransferData;User ID=SA;Password=1Secure*Password1;",
     "RabbitMqConnectionString": "amqp://guest:guest@rabbitmq:5672"
   },
   "AllowedHosts": "*"
