--- a/authentication-service/AuthenticationService/appsettings.json
+++ b/authentication-service/AuthenticationService/appsettings.json
@@ -13,7 +13,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=authentication-service-identity-test-db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=TransferData;User ID=SA;Password=1Secure*Password1;",
+    //"DefaultConnection": "Server=tcp:kwetter-i4034511.database.windows.net,1433;Initial Catalog=authentication-service-db-test;Persist Security Info=False;User ID=admin-denny;Password=Password-1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "RabbitMqConnectionString": "amqp://guest:guest@rabbitmq:5672"
   },
   "Token": {
