--- a/kwetter-frontend/package.json
+++ b/kwetter-frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
+    "next": "^12.1.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.2",
