--- a/kubernetes/profile-service.yaml
+++ b/kubernetes/profile-service.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: authentication-service-deployment
+  name: profile-service-deployment
 spec:
   selector:
     matchLabels:
-    app: authentication-service
+    app: profile-service
   replicas: 1
   template:
     metadata:
     labels:
-      app: authentication-service
+      app: profile-service
     spec:
     containers:
-      - name: authentication-service
-        image: dennycox/authentication-service:latest
+      - name: profile-service
+        image: dennycox/profile-service:latest
         ports:
         - containerPort: 80
