--- a/K8S/profile-service.yaml
+++ b/K8S/profile-service.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: profile
     spec:
+      restartPolicy: Always
       containers:
       - name: profile
         image: dennycox/profile-service:latest
