--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   authentication-service:
     build: ./authentication-service/AuthenticationService
     container_name: authentication-service
+    restart: always
     ports:
       - 6060:80
     networks:
@@ -35,6 +36,7 @@ services:
   profile-service:
     build: ./profile-service/ProfileService
     container_name: profile-service
+    restart: always
     ports:
       - 53231:80
     networks:
