--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,22 @@ services:
     build: ./authentication-service/AuthenticationService
     container_name: authentication-service
     restart: always
+    depends_on:
+      - db
+      - rabbitmq
     ports:
       - 6060:80
-    networks:
-      - network-name
 
-  #SQL Express Authentication
-  sql-express-authentication:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+  #MySQL database
+  db:
+    image: mysql:8.0.22
+    container_name: db
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
-      ACCEPT_EULA: Y
-      SA_PASSWORD: 1Secure*Password1
-    container_name: sql-express-authentication
+        MYSQL_ROOT_PASSWORD: 1Secure*Password1
     ports:
-      - 1401:1433
-    networks:
-      - network-name
+        - 3308:3306
 
   #Kwetter Frontend
   kwetter-frontend:
@@ -29,30 +29,17 @@ services:
     # env_file: .kf.env
     ports:
       - 3000:80
-    networks:
-      - network-name
 
   #Profile Service
   profile-service:
     build: ./profile-service/ProfileService
     container_name: profile-service
     restart: always
+    depends_on:
+      - db
+      - rabbitmq
     ports:
       - 53231:80
-    networks:
-      - network-name
-  
-  #SQL Express Profile
-  sql-express-profile:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    environment:
-      ACCEPT_EULA: Y
-      SA_PASSWORD: 1Secure*Password1
-    container_name: sql-express-profile
-    ports:
-      - 1402:1433
-    networks:
-      - network-name
   
   #RabbitMQ
   rabbitmq:
@@ -61,9 +48,3 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
-    networks:
-      - network-name
-
-networks:
-  network-name:
-    name: kwetter
