--- a/profile-service/ProfileService/appsettings.json
+++ b/profile-service/ProfileService/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=host.docker.internal,1402;Database=TransferData;User ID=SA;Password=1Secure*Password1;",
+    "DefaultConnection": "server=db;port=3306;user=root;password=1Secure*Password1;database=Profile_DB",
     "RabbitMqConnectionString": "amqp://guest:guest@rabbitmq:5672"
   },
   "AllowedHosts": "*"
