--- a/K8S/profile-service.yaml
+++ b/K8S/profile-service.yaml
@@ -23,7 +23,7 @@ spec:
           - containerPort: 80
         env:
           - name: ASPNETCORE_ConnectionStrings:DefaultConnection
-            value: Server=v4jdd6eb2or2.eu-central-2.psdb.cloud;Database=kwetter-db;user=xdsn7s6pxsft;password=pscale_pw_cjctX2f9bqo_9CIQSLJQ52Qw52kLu_jI5nVbPhlzPCg;SslMode=VerifyFull;
+            value: Server=v4jdd6eb2or2.eu-central-2.psdb.cloud;Database=kwetter-db;user=xid7b94iap6y;password=pscale_pw_rnSKcIO3BRd5w_NsHPuEyzQ2TipXlCjbWKDo7Jfq4hQ;SslMode=VerifyFull;
           - name: ASPNETCORE_ConnectionStrings:RabbitMqConnectionString
             value: amqp://guest:guest@rabbitmq:5672
 ---
