--- a/kubernetes/profile.yaml
+++ b/kubernetes/profile.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: profile
     spec:
+      restartPolicy: Always
       containers:
       - name: profile
         image: okteto.dev/profile:latest
