--- a/kubernetes/authentication.yaml
+++ b/kubernetes/authentication.yaml
@@ -22,10 +22,10 @@ spec:
         ports:
           - containerPort: 80
         env:
-        - name: ASPNETCORE_ConnectionStrings:DefaultConnection
-          value: Server=v4jdd6eb2or2.eu-central-2.psdb.cloud;Database=kwetter-db;user=xid7b94iap6y;password=pscale_pw_rnSKcIO3BRd5w_NsHPuEyzQ2TipXlCjbWKDo7Jfq4hQ;SslMode=VerifyFull;
-        - name: ASPNETCORE_ConnectionStrings:RabbitMqConnectionString
-          value: amqp://guest:guest@rabbitmq:5672
+        - name: 'ASPNETCORE_ConnectionStrings__DefaultConnection'
+          value: 'Server=v4jdd6eb2or2.eu-central-2.psdb.cloud;Database=kwetter-db;user=xid7b94iap6y;password=pscale_pw_rnSKcIO3BRd5w_NsHPuEyzQ2TipXlCjbWKDo7Jfq4hQ;SslMode=VerifyFull;'
+        - name: 'ASPNETCORE_ConnectionStrings__RabbitMqConnectionString'
+          value: 'amqp://guest:guest@rabbitmq:5672'
 ---
 apiVersion: v1
 kind: Service
