--- a/kubernetes/profile.yaml
+++ b/kubernetes/profile.yaml
@@ -30,11 +30,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: profile
   name: profile-service
 spec:
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
   selector:
     app: profile
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80 
+  type: LoadBalancer
