--- a/kubernetes/api-gateway.yaml
+++ b/kubernetes/api-gateway.yaml
@@ -12,7 +12,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2 
 spec:
   rules:
-    - http:
+    - host: dennycox.cloud.okteto.net
+      http:
         paths:
           # Authentication Service 
           - path: /authentication-service(/|$)(.)
