--- a/kubernetes/authentication.yaml
+++ b/kubernetes/authentication.yaml
@@ -23,7 +23,7 @@ spec:
           - containerPort: 80
         env:
         - name: 'ASPNETCORE_ConnectionStrings__DefaultConnection'
-          value: 'Server=v4jdd6eb2or2.eu-central-2.psdb.cloud;Database=kwetter-db;user=xid7b94iap6y;password=pscale_pw_rnSKcIO3BRd5w_NsHPuEyzQ2TipXlCjbWKDo7Jfq4hQ;SslMode=VerifyFull;'
+          value: 'Server=v4jdd6eb2or2.eu-central-2.psdb.cloud;Database=kwetter-db;user=23s7jh5cbg4m;password=pscale_pw_QUr79DimJH30dWzZhtiT0ncjBfXUu7wxpPQ3OlrotXY;SslMode=VerifyFull;'
         - name: 'ASPNETCORE_ConnectionStrings__RabbitMqConnectionString'
           value: 'amqp://guest:guest@rabbitmq:5672'
 ---
