--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,20 @@ services:
     container_name: authentication-service
     restart: always
     depends_on:
-      - db
+      - sql-express-authentication
       - rabbitmq
     ports:
       - 6060:80
 
-  #MySQL database
-  db:
-    image: mysql:8.0.22
-    container_name: db
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
+  #SQL Express Authentication
+  sql-express-authentication:
+    image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
-        MYSQL_ROOT_PASSWORD: 1Secure*Password1
+      ACCEPT_EULA: Y
+      SA_PASSWORD: 1Secure*Password1
+    container_name: sql-express-authentication
     ports:
-        - 3308:3306
+      - 1401:1433
 
   #Kwetter Frontend
   kwetter-frontend:
@@ -36,10 +35,20 @@ services:
     container_name: profile-service
     restart: always
     depends_on:
-      - db
+      - sql-express-profile
       - rabbitmq
     ports:
       - 53231:80
+
+  #SQL Express Profile
+  sql-express-profile:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    environment:
+      ACCEPT_EULA: Y
+      SA_PASSWORD: 1Secure*Password1
+    container_name: sql-express-profile
+    ports:
+      - 1402:1433
   
   #RabbitMQ
   rabbitmq:
