--- a/kubernetes/authentication.yaml
+++ b/kubernetes/authentication.yaml
@@ -25,7 +25,7 @@ spec:
         - name: 'ASPNETCORE_ConnectionStrings__DefaultConnection'
           value: 'Server=tcp:kwetter-i4034511.database.windows.net,1433;Initial Catalog=authentication-service-db-test;Persist Security Info=False;User ID=admin-denny;Password=Password-1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
         - name: 'ASPNETCORE_ConnectionStrings__RabbitMqConnectionString'
-          value: 'amqp://guest:guest@rabbitmq:5672'
+          value: 'amqp://user:user@rabbit-mq-rabbitmq.default.svc.cluster.local:5672'
 ---
 apiVersion: v1
 kind: Service
