--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,4 +44,5 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"dennycox_Kwetter" /o:"dennycox" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build authentication-service/AuthenticationService.sln
+          dotnet build profile-service/ProfileService.sln
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
