--- a/kubernetes/kwetter-frontend.yaml
+++ b/kubernetes/kwetter-frontend.yaml
@@ -24,10 +24,10 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: NodePort
   selector:
     app: frontend
   ports:
-    - protocol: TCP
+    - name: frontend
+      protocol: TCP
       port: 3000
       targetPort: 3000
